(lang dune 3.16)

(name fp_1)

(generate_opam_files true)

(authors "Dmitrii Andriianov")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name fp_1)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
